Changes since CPAchecker 1.2
----------------------------

* r7183: scripts/regression.py removed.
  All it's features are also supported by table-generator.py.
* r7043: CPAchecker now requires Java 7.
  C.f. INSTALL.txt, README.txt and doc/Developing.txt for more information.
* r7005: MathSAT4 is no longer available as SMT solver.


Changes from CPAchecker 1.1 to CPAchecker 1.2
---------------------------------------------

CPAchecker now supports several new analyses:

* CEGAR for ExplicitCPA (as submitted to SV-COMP'13)
  (c.f. "Explicit-State Software Model Checking Based on CEGAR and Interpolation", to appear in FASE'13)
  This can be enabled with the "explicitAnalysis" and "explicitAnalysis-ItpRefiner*" configurations
  (explicitAnalysis-ItpRefiner-ABElf is recommended)

* Conditional Model Checking (CMC)
  (c.f. "Conditional Model Checking: A Technique to Pass Information between Verifiers", FSE'12)
  To use two or more CMC-enabled configurations, use the "-cmc" command-line argument:
  Example: -cmc explicitAnalysis-100s-generate-cmc-condition -cmc predicateAnalysis-use-cmc-condition

* Sequential composition of analyses (as submitted to SV-COMP'13)
  The "-cmc" command-line argument can be used for this, too.
  Example: -cmc explicitAnalysis-100s -cmc predicateAnalysis

* Predicate-based analysis using the Impact refinement strategy
  (c.f. "Algorithms for Software Model Checking: Predicate Abstraction vs. IMPACT", FMCAD'12)
  This can be enabled with the "predicateAnalysis-ImpactRefiner-*" configurations.

* BDD-based analysis tracking a subset of variables,
  with ExplicitCPA tracking the remaining variables.
  This can be enabled with the "explicit-BDD-*" configurations.

Other changes to CPAchecker:
* Pre-processing of C files with CIL is no longer needed.
* MathSAT5 is now used as as SMT solver by default.
  MathSAT4 can still be selected by setting the option
  cpa.predicate.solver=Mathsat4
* In configuration files, #include directives can be used